--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="emailweb">
               <div class="email">
                 <div class="icon" id="emailicon"></div>
-                <div class="myemail">ersilditipciu@gmail.com</div>
+                <div class="myemail">ersilditopciu@gmail.com</div>
               </div>
               <div class="web">
                 <div class="icon" id="webicon"></div>
